# bonk

./: CHANGELOG.md  Cargo.toml  README.md  committed.toml  release-plz.toml
.github/workflows/: e2e.yml  release-plz.yml  release.yml  rust-quality.yml
crates/bonk-cli/: Cargo.toml
crates/bonk-cli/src/: flatten.rs  image.rs  main.rs  pack.rs
crates/bonk-common/: Cargo.toml
crates/bonk-common/src/: lib.rs
crates/bonk-runner/: Cargo.toml
crates/bonk-runner/src/: main.rs  mount.rs  runtime.rs
lessons/: 01-workspace-and-project-structure.md  02-structs-traits-and-shared-types.md  03-error-handling-and-cli-skeleton.md  04-spawning-subprocesses.md  05-file-io-and-json-parsing.md  06-trait-objects-and-compression-detection.md  07-iterators-and-layer-flattening.md  08-compression-pipelines-and-binary-assembly.md  09-self-reading-binaries-and-caching.md  10-container-runtime.md
tests/: e2e.sh
