[package]
name = "bonk-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bonk-common = {path = "../bonk-common"}
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
zstd = "0.13"

[[bin]]
name = "bonk"
path = "src/main.rs"